--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build All",
+            "label": "build Program",
             "type": "shell",
             "command": "clang++",
             "args": [
@@ -12,11 +12,9 @@
                 "-o",
                 "${workspaceFolder}/output",
                 "-I",
-                "/usr/include",
+                "${workspaceFolder}",
                 "-L",
                 "/lib/x86_64-linux-gnu",
-                "-lgtest",
-                "-lgtest_main",
                 "-lpthread",
                 "-lssl",
                 "-lcrypto"
@@ -27,38 +25,16 @@
             }
         },
         {
-            "label": "cppcheck",
+            "label": "build and run Test",
             "type": "shell",
-            "command": "cppcheck",
+            "command": "bash",
             "args": [
-                "--enable=all",
-                "--inconclusive",
-                "--std=c++17",
-                "--verbose",
-                "--language=c++",
-                "--check-config",
-                "--suppress=missingIncludeSystem",
-                "--include=/usr/bin/../lib/gcc/x86_64-linux-gnu/12/../../../../include/c++/12",
-                "--include=/usr/bin/../lib/gcc/x86_64-linux-gnu/12/../../../../include/x86_64-linux-gnu/c++/12",
-                "--include=/usr/bin/../lib/gcc/x86_64-linux-gnu/12/../../../../include/c++/12/backward",
-                "--include=/usr/lib/llvm-18/lib/clang/18/include",
-                "--include=/usr/local/include",
-                "--include=/usr/include/x86_64-linux-gnu",
-                "--include=/usr/include",
-                "${workspaceFolder}/*.cpp"
+                "-c",
+                "clang++ -std=c++17 -g ${workspaceFolder}/test/test.cpp ${workspaceFolder}/*.cpp -o ${workspaceFolder}/test/test_output -I ${workspaceFolder} -L /lib/x86_64-linux-gnu -lgtest -lgtest_main -lpthread -lssl -lcrypto && ${workspaceFolder}/test/test_output"
             ],
-            "group": "build",
-            "problemMatcher": {
-                "owner": "cppcheck",
-                "fileLocation": ["relative", "${workspaceFolder}"],
-                "pattern": {
-                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
-                    "file": 1,
-                    "line": 2,
-                    "column": 3,
-                    "severity": 4,
-                    "message": 5
-                }
+            "group": {
+                "kind": "test",
+                "isDefault": true
             }
         }
     ]
