--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -21,7 +21,8 @@
             "args": [
                 "-std=c++17",
                 "-g",
-                "${workspaceFolder}/*.cpp",
+                "${workspaceFolder}/main.cpp",  // Build the main program with main.cpp
+                "${workspaceFolder}/*.cpp",     // Include all other cpp files
                 "-o",
                 "${workspaceFolder}/output",
                 "-I",
@@ -31,7 +32,7 @@
                 "-I",
                 "/usr/src/gtest/include",  // Include Google Test headers
                 "-L",
-                "/usr/src/gtest/lib",  // Link Google Test libraries
+                "/usr/src/gtest/lib",      // Link Google Test libraries
                 "-lgtest",
                 "-lgtest_main",
                 "-lpthread",
@@ -50,7 +51,7 @@
             "command": "bash",
             "args": [
                 "-c",
-                "clang++ -std=c++17 -g ${workspaceFolder}/test/test.cpp ${workspaceFolder}/*.cpp -o ${workspaceFolder}/test/test_output -I ${workspaceFolder} -I /usr/include/jsoncpp -I /usr/src/gtest/include -L /usr/src/gtest/lib -lgtest -lgtest_main -lpthread -lssl -lcrypto -ljsoncpp"
+                "clang++ -std=c++17 -g ${workspaceFolder}/test/test.cpp ${workspaceFolder}/bank.cpp ${workspaceFolder}/client.cpp -o ${workspaceFolder}/test/test_output -I ${workspaceFolder} -I /usr/include/jsoncpp -I /usr/src/gtest/include -L /usr/src/gtest/lib -lgtest -lgtest_main -lpthread -lssl -lcrypto -ljsoncpp"
             ],
             "group": {
                 "kind": "build",
@@ -76,7 +77,7 @@
             "command": "bash",
             "args": [
                 "-c",
-                "clang++ -std=c++17 -g ${workspaceFolder}/test/test.cpp ${workspaceFolder}/*.cpp -o ${workspaceFolder}/test/test_output -I ${workspaceFolder} -I /usr/include/jsoncpp -I /usr/src/gtest/include -L /usr/src/gtest/lib -lgtest -lgtest_main -lpthread -lssl -lcrypto -ljsoncpp && ${workspaceFolder}/test/test_output"
+                "clang++ -std=c++17 -g ${workspaceFolder}/test/test.cpp ${workspaceFolder}/bank.cpp ${workspaceFolder}/client.cpp -o ${workspaceFolder}/test/test_output -I ${workspaceFolder} -I /usr/include/jsoncpp -I /usr/src/gtest/include -L /usr/src/gtest/lib -lgtest -lgtest_main -lpthread -lssl -lcrypto -ljsoncpp && ${workspaceFolder}/test/test_output"
             ],
             "group": {
                 "kind": "test",
